// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search result container tests - View renders category hierarchy list null 1`] = `
<div
  class="module-class"
  data-m-t="mock-type"
  id=""
>
  <div
    class=""
  />
  <div
    class=""
  >
    <div
      class="node-class"
    >
      <div
        class="node-class"
      >
        <span>
           foo 
        </span>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class="ms-search-result-wrapper-title-choice-summary"
      >
        <div
          class="node-class-TitleContent"
        >
          <h2>
            <span>
               foo 
            </span>
            <span>
               foo 
            </span>
            (
            <span>
               foo 
            </span>
            )
          </h2>
        </div>
      </div>
      <div
        class="ms-search-result-wrapper-sort-by-category"
      >
        <div
          class="node-class"
        >
          <div>
            foo
          </div>
        </div>
      </div>
      <div
        class=""
      >
        <div>
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search result container tests - View renders correctly 1`] = `
<div
  class="module-class"
  data-m-t="mock-type"
  id=""
>
  <div
    class=""
  >
    <div
      class="node-class"
    >
      <span>
         foo 
      </span>
    </div>
  </div>
  <div
    class=""
  >
    <div
      class="node-class"
    >
      <div
        class="node-class"
      >
        <span>
           foo 
        </span>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class="ms-search-result-wrapper-title-choice-summary"
      >
        <div
          class="node-class-TitleContent"
        >
          <h2>
            <span>
               foo 
            </span>
            <span>
               foo 
            </span>
            (
            <span>
               foo 
            </span>
            )
          </h2>
        </div>
      </div>
      <div
        class="ms-search-result-wrapper-sort-by-category"
      >
        <div
          class="node-class"
        >
          <div>
            foo
          </div>
        </div>
      </div>
      <div
        class=""
      >
        <div>
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search result container tests - View renders refiner as null 1`] = `
<div
  class="module-class"
  data-m-t="mock-type"
  id=""
>
  <div
    class=""
  />
  <div
    class=""
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class="ms-search-result-wrapper-title-choice-summary"
      >
        <div
          class="node-class-TitleContent"
        >
          <h2>
            <span>
               foo 
            </span>
            <span>
               foo 
            </span>
            (
            <span>
               foo 
            </span>
            )
          </h2>
        </div>
      </div>
      <div
        class="ms-search-result-wrapper-sort-by-category"
      />
      <div
        class=""
      >
        <div>
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search result container tests - View renders sorts as null 1`] = `
<div
  class="module-class"
  data-m-t="mock-type"
  id=""
>
  <div
    class=""
  />
  <div
    class=""
  >
    <div
      class="node-class"
    >
      <div
        class="node-class"
      >
        <span>
           foo 
        </span>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class="ms-search-result-wrapper-title-choice-summary"
      >
        <div
          class="node-class-TitleContent"
        >
          <h2>
            <span>
               foo 
            </span>
            <span>
               foo 
            </span>
            (
            <span>
               foo 
            </span>
            )
          </h2>
        </div>
      </div>
      <div
        class="ms-search-result-wrapper-sort-by-category"
      />
      <div
        class=""
      >
        <div>
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search result container tests - View renders title as blank 1`] = `
<div
  class="module-class"
  data-m-t="mock-type"
  id=""
>
  <div
    class="node-class-TitleContent"
  >
    <h2>
      <span>
         foo 
      </span>
      <span>
         foo 
      </span>
      (
      <span>
         foo 
      </span>
      )
    </h2>
  </div>
  <div>
    <div>
       foo 
    </div>
    <div />
    <div>
       foo 
    </div>
  </div>
  <div
    class=""
  />
  <div
    class=""
  >
    <div>
      foo
    </div>
  </div>
</div>
`;
